# watch_crew

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/watch_crew/: crew.py  main.py  models.py
src/watch_crew/config/: agents.yaml  sites.yaml  tasks.yaml
tests/: test_analyze.py  test_chrono24.py  test_input_combined.json  test_jomashop.py  test_report.py
