[project]
name = "watch_crew"
version = "0.1.0"
description = "Watch price comparison crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=1.0.0",
]

[project.scripts]
watch_crew = "watch_crew.main:run"
run_crew = "watch_crew.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.pyright]
# So "Go to Definition" and indexing resolve watch_crew to src/watch_crew
extraPaths = ["src"]
